--- a/angular.json
+++ b/angular.json
@@ -47,8 +47,8 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kB",
-                  "maximumError": "1MB"
+                  "maximumWarning": "550kb",
+                  "maximumError": "600kb"
                 },
                 {
                   "type": "anyComponentStyle",
